Fix spacing

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,7 +5,7 @@
 
 .screenContainer,
 .titleContainer {
-  padding-top: 100px;
+  padding-top: 125px;
   height: 100vh;
   max-width: 100%;
   position: relative;
