--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -24,6 +24,7 @@
 @media (max-width: 500px) {
     .headerContainer {
         padding: 0;
+        min-height: 800px;
     }
 }
 
